# rub3

./: Cargo.toml  README.md  architecture.md  ideation.md  implementation.md  testing.md
contracts/: .env.example  .gitignore  contracts.md  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: Rub3Access.sol  Rub3License.sol  Rub3Subscription.sol
contracts/test/: Rub3Access.t.sol  Rub3Subscription.t.sol
crates/deotp-wrapper/: Cargo.toml
crates/deotp-wrapper/assets/: activation.html
crates/deotp-wrapper/src/: license.rs  machine_id.rs  main.rs  rpc.rs  store.rs  supervisor.rs  webview.rs
crates/deotp-wrapper/tests/: integration.rs
crates/rub3-wrapper/: Cargo.toml
crates/rub3-wrapper/assets/: activation.html
crates/rub3-wrapper/src/: activation.rs  decrypt.rs  device.rs  identity.rs  lib.rs  license.rs  machine_id.rs  main.rs  rpc.rs  session.rs  session_store.rs  store.rs  webview.rs
crates/rub3-wrapper/tests/: integration.rs  license_e2e.rs  session_onchain_e2e.rs
crates/rub3-wrapper/tests/helpers/: mod.rs
licenses/: com.rub3.example.json
scripts/: seed-license.sh  test-e2e.sh
