[package]
name = "deotp-wrapper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deotp-wrapper"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
machine-uid = "0.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"
